k8s/ingress/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basicauth
  namespace: monitoring
spec:
  basicAuth:
    secret: basicauth
